--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "filesize": "^11.0.2",
